📺👔 Checkpoint ./server.js:1062301/62 ./src/pages/index.hbs:1062301/135 ./src/astra.js:1062301/2964 ./package.json:1062301/2509

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -85,20 +85,18 @@
             alt="Node logo"
           />
         </div>
-        {{#if colorHistory}}
+        {{#if optionHistory}}
           <div>
             Color History
-            <b><a href="/delete-color-history">Delete History</a></b>
+            <b><a href="/delete-option-history">Delete History</a></b>
             <table>
               <tr>
                 <th>Color Name</th>
-                <th>Color Value</th>
                 <th>Timestamp</th>
               </tr>
-              {{#each colorHistory}}
+              {{#each optionHistory}}
                 <tr>
                   <td>{{name}}</td>
-                  <td>{{value}}</td>
                   <td>{{timestamp}}</td>
                 </tr>
               {{/each}}
