--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,117 +1,149 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    
+    <!-- 
+      This is the main Handlebars template for the site 
+      - When the user visits the homepage or submits a choice the app calls the endpoints in server.js
+      - The server script passes data in here and the Handlebars code builds it into the HTML page
+    -->
+    
     <meta charset="utf-8" />
     <link rel="icon" href="https://glitch.com/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>{{seo.title}}</title>
+    
+    <!-- Meta tags for SEO and social sharing -->
+    <link rel="canonical" href="{{seo.url}}">
+    <meta name="description" content="{{seo.description}}">
+    <meta property="og:title" content="{{seo.title}}">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="{{seo.url}}">
+    <meta property="og:description" content="{{seo.description}}">
+    <meta property="og:image" content="{{seo.image}}">
+    <meta name="twitter:card" content="summary">
 
-    <!-- meta tags for SEO and social sharing -->
-    <link rel="canonical" href="{{seo.url}}" />
-    <meta name="description" content="{{seo.description}}" />
-    <meta property="og:title" content="{{seo.title}}" />
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content="{{seo.url}}" />
-    <meta property="og:description" content="{{seo.description}}" />
-    <meta property="og:image" content="{{seo.image}}" />
-    <meta name="twitter:card" content="summary" />
-
-    <!-- import the webpage's stylesheet -->
+    <!-- Import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
-
-    <!-- this is a handlebars IF statement, checking for a custom "color" parameter set in server.js -->
-    {{#if color}}
-      <style>
-        .title { color:
-        {{color}}; }
-      </style>
-    {{/if}}
+    
+    <!-- Show choice chart on poll submission -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="text/javascript">
+      /*
+      The chart chart uses chart.js - try tweaking the config!
+      https://www.chartjs.org/docs/3.0.2/charts/doughnut.html
+      */
+    function showChart(choices, picks){
+      // We pass the choices and picks arrays from the page when the server script returns them
+      var ctx = document.getElementById('myChart');
+      var myLineChart = new Chart(ctx, {
+        type: "doughnut",
+        data: {
+          labels: choices,
+          datasets: [{
+            data: picks,
+            backgroundColor: ["#05DA84", "#E6E656", "#E5AED6"],
+            borderColor: "#ffffff",
+            fill: true,
+            hoverOffset: 12,
+            cutout: "60%"
+          }]
+        },
+        options: {
+          plugins: {
+            legend: { 
+              display: true,
+              position: "bottom",
+              labels: {
+                padding: 24
+              }
+            }
+          },
+          layout: {
+            padding: 24
+          }
+        }
+      });
+    }
+    </script>
+    
   </head>
   <body>
     <div class="wrapper">
       <div class="content" role="main">
-        <!-- this is the start of content for our page -->
-        <h1 class="title">Hello Astra!</h1>
-
-        <!-- add text indicating that we've changed color OR had an error -->
-        {{#if color}}
-          <p class="color-info">
-            Now available in
-            <b>{{color}}</b>!
+          
+        <!-- This is the start of content for our page -->
+        <h1>Hello SQLite!</h1>
+          <p>
+            A simple poll built with Chart.js and powered by Node.js with a SQLite database.
           </p>
-        {{/if}}
-        {{#if colorError}}
-          <p class="color-info">
-            Hmm. Couldn't find
-            <b>"{{colorError}}"</b>.
-            <a href="?randomize=go">Try a random color?</a>
-          </p>
-        {{/if}}
-
-        <div class="color-form">
-          <!-- our default paragraph/message -->
-          {{#unless colorError}}
-            {{#unless color}}
-              <!-- There are fancier ways to do this, but nesting two "#unless" statements sets up a "if these are both missing..." condition -->
+          <!-- Server returns a flag when the user has submitted a choice and we show the results -->
+          {{#if picked}}
+            <h2>
+              Results
+            </h2>
+            <div class="poll-results">
               <p>
-                Learn about communication with a server by talking about color.
+                Submissions so far (see the <a href="/logs">Admin</a> page for a log):
               </p>
-            {{/unless}}
-          {{/unless}}
-
-          <!-- the "what's your favorite color?" form sends a POST to the server, check server.js to see how it works -->
-          <form class="color-search" method="post">
-            <label for="color">
-              <!-- we use the handlebars "#if" statement so the form can adapt to its situation -->
-              {{#if color}}
-                Try another color?<br />
-              {{else}}
-                What's your favorite color?<br />
-              {{/if}}
-              <input id="color" name="color" required="required" type="text" />
-            </label>
-
-            <button type="submit">Submit</button>
-          </form>
-
-          <!-- this randomize link communicates with the server (server.js) using a querystring and GET request instead of a form POST -->
-          Can't decide?
-          <a href="?randomize=go">Use a random color!</a>
+              <p>
+                <!-- Pass choices + picks arrays from the API to the chart js script in the page head -->
+                <canvas id="myChart"></canvas>
+                <script type="text/javascript">
+                  showChart({{{choices}}}, {{{picks}}});
+                </script>
+              </p>
+              <!-- If the user hasn't already made a choice we show the poll -->
+            </div>
+          {{else}}
+            <h2>
+              Poll
+            </h2>
+            <div class="poll-form">
+              <p>
+                What do you like coding most?
+              </p>
+              <!-- Call the server pick endpoint when the user submits an option in the poll -->
+              <form method="post" action="/pick">
+                <!-- The server script returns the list of language options to offer in the poll -->
+                {{#each options}}
+                <input type="radio" id="{{language}}" name="language" value="{{language}}" required/>
+                <label for="{{language}}">{{language}}</label>
+                {{/each}}
+                <br/><br/>
+                <button type="submit">
+                  Submit
+                </button>
+              </form>
+            </div>
+          {{/if}}
+        
+        <!-- Instructions on using this project -->
+        <div class="instructions">
+          <h2>
+            Using this project
+          </h2>
+          <p>
+            This is the Glitch <strong>Hello SQLite</strong> project. You can
+            use it to build your own app. Check out README.md in the editor for
+            more info and next steps you can take!
+          </p>
         </div>
-        <div class="illo-container">
-          <img
-            src="https://cdn.glitch.com/c62efef6-1e75-45cf-b248-afeccdda9477%2Fillustration.svg?v=1618196069568"
-            class="illustration"
-            alt="Node logo"
-          />
-        </div>
-        {{#if optionHistory}}
-          <div>
-            Color History
-            <b><a href="/delete-option-history">Delete History</a></b>
-            <table>
-              <tr>
-                <th>Color Name</th>
-                <th>Timestamp</th>
-              </tr>
-              {{#each optionHistory}}
-                <tr>
-                  <td>{{name}}</td>
-                  <td>{{timestamp}}</td>
-                </tr>
-              {{/each}}
-            </table>
-          </div>
-        {{/if}}
+        
       </div>
     </div>
-    <!-- the footer holds our remix button — you can use it for structure or cut it out ✂ -->
+    
+    <!-- The footer holds our remix button — you can use it for structure or cut it out ✂ -->
     <footer class="footer">
       <div class="links"></div>
+      <a href="/">Home</a>
+      <span class="divider">|</span>
+      <a href="/logs">Admin</a>
       <a
         class="btn--remix"
         target="_top"
-        href="https://glitch.com/edit/#!/remix/clone-from-repo?REPO_URL=https://github.com/DataStax-Examples/glitch-astra-starter"
+        href="https://glitch.com/edit/#!/remix/glitch-hello-sqlite"
       >
         <img
           src="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2FLogo_Color.svg?v=1618199565140"
