🏟👝 Checkpoint ./server.js:1062301/2798 ./src/pages/admin.hbs:1062301/178 ./public/style.css:1062301/8717 ./src/pages/index.hbs:1062301/111

--- a/src/pages/admin.hbs
+++ b/src/pages/admin.hbs
@@ -34,11 +34,10 @@
         <!-- Write out a table row for each entry in the log array showing choice and timestamp -->
         {{#if optionHistory}}
           <div>
-            Color History
-            <b><a href="/delete-option-history">Delete History</a></b>
+            <h2>Poll History</h2>
             <table>
               <tr>
-                <th>Color Name</th>
+                <th>Option Name</th>
                 <th>Timestamp</th>
               </tr>
               {{#each optionHistory}}
