--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -74,9 +74,9 @@
       <div class="content" role="main">
           
         <!-- This is the start of content for our page -->
-        <h1>Hello SQLite!</h1>
+        <h1>Hello Astra!</h1>
           <p>
-            A simple poll built with Chart.js and powered by Node.js with a SQLite database.
+            A simple poll built with Chart.js and powered by the DataStax Astra cloud database accessed via Node.js.
           </p>
           <!-- Server returns a flag when the user has submitted a choice and we show the results -->
           {{#if picked}}
