--- a/public/style.css
+++ b/public/style.css
@@ -8,9 +8,9 @@ to this section's matching END comment to see page-specific styles.
 ******************************************************************************/
 /* Our default values set as CSS variables */
 :root {
-  --color-bg: #bdc9ff;
+  --color-bg: #FFE6F8;
   --color-text-main: #000000;
-  --color-primary: #afece0;
+  --color-primary: #D7F5EF;
   --wrapper-height: 87vh;
   --image-max-width: 300px;
   --image-margin: 3rem;
@@ -49,7 +49,7 @@ to this section's matching END comment to see page-specific styles.
   height: 2.75rem;
   align-items: center;
   cursor: pointer;
-  background: #ffffff;
+  background: #FFFFFF;
   border: 1px solid #000000;
   box-sizing: border-box;
   border-radius: 4px;
@@ -62,7 +62,7 @@ to this section's matching END comment to see page-specific styles.
   margin-right: 0.5rem;
 }
 .btn--remix:hover {
-  background-color: #d0fff1;
+  background-color: #D0FFF1;
 }
 
 /* Navigation grid */
@@ -119,15 +119,17 @@ body {
   flex-direction: column;
   align-items: left;
   justify-content: left;
+  max-width: 600px;
 }
 
-p {
+p,
+label {
   font-size: 1.25rem;
 }
 
 /* Title h1 style */
-.title {
-  color: #2800ff;
+h1 {
+  color: #2800FF;
   font-family: HK Grotesk;
   font-style: normal;
   font-weight: bold;
@@ -147,80 +149,63 @@ p {
   margin-top: 1rem;
 }
 
-/* Styles for our custom color form and its results */
-.color-info {
-  margin-left: 5px;
+/* Styles for our poll form and its results */
+.poll-form,
+.poll-results {
+  background-color: #FFF3FC;
+  padding: 0 16px 16px 16px;
+  border-radius: 8px;
 }
-.color-search {
-  margin-top: 3rem;
-}
-.color-form {
-  width: 90%;
-  max-width: 500px;
-  margin-left: 5px;
-}
-.color-form a:not(.btn--remix) {
-  font-weight: bold;
-  color: var(--color-text-main);
-  margin-top: 8px;
-}
-.color-form button {
-  margin-top: 8px;
-}
-.color-form button:hover {
+.poll-form button:hover {
   cursor: pointer;
-  box-shadow: -8px 4px 20px #9be7d8;
-}
-form {
-  margin: 0.75rem 0;
+  box-shadow: -8px 4px 20px var(--color-primary);
 }
 button,
 input {
   font-family: inherit;
   font-size: 100%;
-  background: #ffffff;
+  background: #FFFFFF;
   border: 1px solid #000000;
   box-sizing: border-box;
   border-radius: 4px;
   padding: 0.5rem 1rem;
+}
+button {
+  cursor: pointer;
 }
 label {
   color: #000000;
   font-weight: bold;
 }
 
+/* Instructions */
+.instructions {
+  margin: 1rem auto 0;
+}
+.instructions p {
+  font-size: 1rem;
+}
+h2 {
+  color: #2800FF;
+}
+
+/* Admin page */
 table {
-  border-collapse: collapse;
-  margin: 25px 0;
-  font-size: 0.9em;
-  font-family: sans-serif;
-  min-width: 400px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-}
-
-tr {
-  background-color: #EEE;
   text-align: left;
+  border-collapse: collapse;
+  background-color: #FFF3FC;
 }
-
-th,
-td {
-  padding: 12px 15px;
+td,
+th {
+  border: 2px solid #FFFFFF;
+  padding: 0.5rem;
 }
-
-tr {
-  border-bottom: 1px solid var(--color-primary);
-}
-
-tr:nth-of-type(even) {
-  background-color: #fff;
-}
-
-tr:last-of-type {
-  border-bottom: 2px solid var(--color-primary);
-}
-
-tr.active-row {
+p a {
+  text-decoration: none;
   font-weight: bold;
-  color: var(--color-primary);
+}
+p.error,
+p.error a:link,
+p.error a:visited {
+  color: #2800FF;
 }
