--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -108,8 +108,8 @@
               <form method="post" action="/">
                 <!-- The server script returns the list of language options to offer in the poll -->
                 {{#each options}}
-                <input type="radio" id="{{language}}" name="language" value="{{language}}" required/>
-                <label for="{{language}}">{{language}}</label>
+                <input type="radio" id="{{name}}" name="language" value="{{name}}" required/>
+                <label for="{{name}}">{{name}}</label>
                 {{/each}}
                 <br/><br/>
                 <button type="submit">
