🎥🍱 Checkpoint ./server.js:1062301/41 ./src/pages/index.hbs:1062301/73 ./src/astra.js:1062301/180

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -91,7 +91,7 @@
                 <!-- Pass choices + picks arrays from the API to the chart js script in the page head -->
                 <canvas id="myChart"></canvas>
                 <script type="text/javascript">
-                  showChart({{{choices}}}, {{{picks}}});
+                  showChart({{{optionNames}}}, {{{optionCounts}}});
                 </script>
               </p>
               <!-- If the user hasn't already made a choice we show the poll -->
