--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -126,9 +126,9 @@
             Using this project
           </h2>
           <p>
-            This is the Glitch <strong>Hello SQLite</strong> project. You can
-            use it to build your own app. Check out README.md in the editor for
-            more info and next steps you can take!
+            This app was based on the Glitch <strong>Hello SQLite</strong> project, but
+            showing the power of a persistent cloud database using DataStax Astra. Check out 
+            README.md in the editor for more info and next steps you can take!
           </p>
         </div>
         
