--- a/src/pages/admin.hbs
+++ b/src/pages/admin.hbs
@@ -17,6 +17,9 @@
     <!-- Import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
     
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kanit:wght@700&amp;family=Roboto:wght@400;500;900&amp;display=swap">
   </head>
   <body>
     <div class="wrapper">
