--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -68,6 +68,9 @@
     }
     </script>
     
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kanit:wght@700&amp;family=Roboto:wght@400;500;900&amp;display=swap">
   </head>
   <body>
     <div class="wrapper">
