🛳🍡 Checkpoint ./public/style.css:1062301/176 ./src/pages/admin.hbs:1062301/41

--- a/src/pages/admin.hbs
+++ b/src/pages/admin.hbs
@@ -54,7 +54,7 @@
         {{/if}}
         
         <!-- The user can clear the logs if they first set up and admin key in the env -->
-        <form action="/clearLogs" method="post">
+        <form action="/clearLogs" method="post" class="form-clear-results">
           <h2>
             Clear log history
           </h2>
