--- a/public/style.css
+++ b/public/style.css
@@ -87,7 +87,7 @@ a:not(.btn--remix):visited {
   border-style: none;
 }
 .footer a:hover {
-  background: var(--color-primary);
+  background: var(--color-bg);
 }
 
 .footer .links {
@@ -139,7 +139,7 @@ h1 {
   margin: 2rem 0 0;
 }
 h2 {
-  color: #AAAAAA;
+  color: var(--color-primary);
 }
 
 /* Styles for our poll form and its results */
@@ -201,6 +201,9 @@ p.error a:link,
 p.error a:visited {
   color: #2800FF;
 }
+.form-clear-results {
+  margin: 3rem 0;
+}
 
 /* DataStax branding */
 .logo-datastax {
@@ -216,10 +219,13 @@ body {
   line-height: 1.5rem;
 }
 h1 {
-  font-size: 80px;
+  font-size: 48px;
   margin-top: 0.5rem;
 }
 h1, h2 {
   font-family: "Kanit", sans-serif;
   font-weight: 700;
+}
+.footer a:hover {
+  background: #222222;
 }
