--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -77,6 +77,7 @@
       <div class="content" role="main">
           
         <!-- This is the start of content for our page -->
+        <img src="https://auth.cloud.datastax.com/auth/resources/dah2r/login/cloud/img/datastax-white-logo.svg" alt="DataStax" class="logo-datastax" /> x
         <img src="https://auth.cloud.datastax.com/auth/resources/dah2r/login/cloud/img/datastax-white-logo.svg" alt="DataStax" class="logo-datastax" />
         <h1>Hello Astra!</h1>
           <p>
