--- a/src/pages/admin.hbs
+++ b/src/pages/admin.hbs
@@ -31,7 +31,7 @@
         <!-- The server script returns the logs in an array so we can write out the length -->
         <p>
           Each time you submit an option through the poll in the <a href="/">Home</a> page, the app 
-          will add it to the log. <em>Most recent records will be shown (max 20).</em>
+          will add it to the log. <em>Most recent records will be shown.</em>
         </p>
 
         <!-- Write out a table row for each entry in the log array showing choice and timestamp -->
