📯😀 Checkpoint ./src/pages/index.hbs:1062301/1160

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -128,6 +128,10 @@
                 </form>
               {{else}}
                 <p>
+                  <canvas id="myChart"></canvas>
+                  <script type="text/javascript">
+                    showChart(["finish","setup","README"], [1,2,3]);
+                  </script>
                   [ Additional setup info ]  
                 </p>
               {{/if}}
