👲🌔 Checkpoint ./public/style.css:1062301/273 ./src/pages/index.hbs:1062301/4

--- a/public/style.css
+++ b/public/style.css
@@ -249,3 +249,8 @@ h1, h2 {
 strong, label {
   font-weight: 500;
 }
+@media only screen and (min-width: 600px) {
+  .setup-instructions {
+    display: flex;
+  }
+}
