--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -131,7 +131,7 @@
                   <div class="setup-column">
                     <canvas id="myChart" class="setup"></canvas>
                     <script type="text/javascript">
-                      showChart(["finish","setup","README.md"], [1,2,3]);
+                      showChart(["Finish","Setup","README.md"], [1,2,3]);
                     </script>
                   </div>
                   <div class="setup-column">
