🚝🌊 Checkpoint ./server.js:31317407/107 ./public/style.css:31317407/29

--- a/public/style.css
+++ b/public/style.css
@@ -203,7 +203,7 @@ p a {
 p.error,
 p.error a:link,
 p.error a:visited {
-  color: #2800FF;
+  color: var(--color-primary);
 }
 .form-clear-results {
   margin: 3rem 0;
