--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -89,7 +89,7 @@
             The easiest Cassandra ever. A simple poll using Chart.js and powered by the <strong>DataStax Astra</strong> cloud database. Built in Node.js, instantly remixable on Glitch.
           </p>
           <!-- Server returns a flag when the user has submitted a choice and we show the results -->
-          {{#if picked}}
+          {{#if results}}
             <h2>
               Results
             </h2>
@@ -101,7 +101,7 @@
                 <!-- Pass arrays from the API to the chart js script in the page head -->
                 <canvas id="myChart"></canvas>
                 <script type="text/javascript">
-                  showChart({{{optionNames}}}, {{{optionCounts}}});
+                  showChart("{{{ optionNames }}}".split(","), "{{{ optionCounts }}}".split(","));
                 </script>
               </p>
               <!-- If the user hasn't already made a choice we show the poll -->
@@ -111,22 +111,24 @@
               Poll
             </h2>
             <div class="poll-form">
-              {{#if options}}
+              {{#if optionNames}}
                 <p>
                   What do you like coding most?
                 </p>
                 <!-- Call the server post endpoint when the user submits an option in the poll -->
                 <form method="post" action="/">
                   <!-- The server script returns the list of language options to offer in the poll -->
-                  {{#each options}}
-                  <input type="radio" id="{{name}}" name="optionName" value="{{name}}" required/>
-                  <label for="{{name}}">{{name}}</label>
+                  {{#each optionNames}}
+                  <input type="radio" id="{{this}}" name="optionName" value="{{this}}" required/>
+                  <label for="{{this}}">{{this}}</label>
                   {{/each}}
                   <br/><br/>
                   <button type="submit">
                     Submit
                   </button>
                 </form>
+              <!-- ADD LINK FROM README NEXT STEPS -->
+              
               <!-- On first remix you need to setup your DB–see the README -->
               {{else}}
                 <div class="setup-instructions">
