🏘👠 Checkpoint ./src/pages/index.hbs:1062301/3 ./src/seo.json:1062301/7

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -84,7 +84,7 @@
           <img src="https://cdn.glitch.com/ae313032-8fbd-4b72-bdc1-d5a86e415b34%2FGlitchLogo_White_Wordmark.svg?v=1622574463535" alt="Glitch" class="logo-glitch" />       
         </div>
 
-        <h1>Hello Astra!</h1>
+        <h1>Hello Astra DB!</h1>
           <p>
             The easiest Cassandra ever. A simple poll using Chart.js and powered by the <strong>DataStax Astra</strong> cloud database. Built in Node.js, instantly remixable on Glitch.
           </p>
