--- a/src/pages/admin.hbs
+++ b/src/pages/admin.hbs
@@ -12,7 +12,7 @@
     <link rel="icon" href="https://glitch.com/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Hello SQLite: Logs</title>
+    <title>{{seo.title}} – Logs</title>
 
     <!-- Import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
